--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона</title>
     <link href="css/style.min.css" rel="stylesheet">
-    <script src="js/picturefill.js"></script>
+    <script src="js/service/picturefill.js"></script>
   </head>
   <body>
     <div style="display:none">
@@ -198,6 +198,6 @@
       </footer>
     </div>
     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A335796ec8cdd862ab8aacbede6df46500a384fdd5823d625c380276c84a98050&amp;height=350&amp;lang=ru_RU&amp;id=yandex-map&amp;scroll=false"></script>
-    <script src="js/close-open.min.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
